@@ -11,10 +11,6 @@ override_dh_install:
 	find debian/tmp/usr/lib/$(DEB_HOST_MULTIARCH)/gstreamer-1.0  -name *.a -exec rm {} \;
 	dh_install --list-missing
 
-override_dh_shlibdeps:
-	dh_shlibdeps
-	dh_girepository
-
 override_dh_makeshlibs:
 	dh_makeshlibs -plibfarstream-0.2-5 \
 		-X/usr/lib/$(DEB_HOST_MULTIARCH)/gstreamer-1.0 \
@@ -29,6 +25,4 @@ override_dh_strip:
 	dh_strip --ddeb-migration='libfarstream-0.2-dbg (<< 0.2.7-1~)'
 
 %:
-	dh $@ --with autoreconf
-
-.PHONY: override_dh_strip
+	dh $@ --with autoreconf,gir
